# C_Cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  IZ1  IZ1.cbp  Makefile  README.md  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
ci/travis/: install-linux.sh  install-osx.sh
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
googletest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
include/IZ1/: craft_string.h
src/: craft_string.c  main.c  multiply_matrix.c
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  add_word.cpp  add_word_tests  cmake_install.cmake  create_string.cpp  create_string_tests  multiply_matrix.cpp  multiply_matrix_tests  multiply_word.cpp  multiply_word_tests  print_reverse.cpp  print_reverse_tests  read_to_strings.cpp  read_to_strings_tests
